@@ -1,3 +1,4 @@
+* Add comment on table and field for postgresql backend
 * Remove egenix-mx-base and replace it by python-dateutil
 * Add cache to safe_eval
 * Rename HttpDaemon into XMLRPCDaemon
